Web container working fine. All dependencies satisfied. Verified by logging into the website.

--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -1,3 +1,17 @@
 FROM centos:7
 RUN yum update -y \
-	&& yum install httpd mod_ssl php php-mysql php-xml php-xmlrpc php-ldap -y
+	&& yum install httpd mod_ssl php php-mysql php-xml php-xmlrpc php-ldap -y \
+	&& yum clean all \
+	&& rm -rf /var/cache/yum
+COPY web /var/www/html/vcl
+COPY secrets.php /var/www/html/vcl/.ht-inc/
+WORKDIR /var/www/html/vcl/.ht-inc
+RUN ["chmod", "+x", "genkeys.sh"]
+RUN ["./genkeys.sh"]
+COPY conf.php /var/www/html/vcl/.ht-inc/
+RUN ["chown", "-R", "apache", "/var/www/html/vcl/.ht-inc/maintenance"]
+RUN ["chown", "-R", "apache", "/var/www/html/vcl/.ht-inc/cryptkey"]
+EXPOSE 80 
+EXPOSE 443
+WORKDIR /var/www/html/vcl
+CMD ["/usr/sbin/apachectl", "-D", "FOREGROUND"]
