Added management node submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "www/web"]
 	path = www/web
 	url = git@bitbucket.org:systemengineers/vcl-web.git
+[submodule "mgmt/managementnode"]
+	path = mgmt/managementnode
+	url = git@bitbucket.org:systemengineers/vcl-managementnode.git
