Running VCL Management Daemon in foreground mode using supervisord

--- a/mgmt/etc/supervisor.d/vcld.conf
+++ b/mgmt/etc/supervisor.d/vcld.conf
@@ -2,4 +2,4 @@
 nodaemon=true
 
 [program:vcld]
-command=/usr/local/vcl/bin/vcld -vvv -conf=/etc/vcl/vcld.conf
+command=/usr/local/vcl/bin/vcld --verbose  --config=/etc/vcl/vcld.conf --nodaemon
