Added vsphere perl sdk installation. added dependency so management node does not start before the database is available. added modified version of vsphere sdk that does not confirm user input.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - "443:443"
     links:
       - db:db
+    depends_on:
+      - db
     domainname: vcl.local
     hostname: www
 
@@ -29,6 +31,8 @@ services:
     hostname: mgmt
     links:
       - db:db
+    depends_on:
+      - db
     volumes:
       - /var/log/vcl/
 
