Added logging. Simplified default password.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # MariaDB Settings
 MYSQL_DATABASE=vcl
 MYSQL_USER=vcl
-MYSQL_PASSWORD=ev8orc%Oxtin
+MYSQL_PASSWORD=s3cr3t
 MYSQL_RANDOM_ROOT_PASSWORD=yes
 MYSQL_PORT=3306
