Enabled debug support for website

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - db
     domainname: vcl.local
     hostname: www
+    image: junaid/vcl-www:debug
 
   managementnode:
     build: mgmt
