Added detail instructions for setting up debugging. Masked debugging IP within xdebug.ini

--- a/www/etc/php.d/xdebug.ini
+++ b/www/etc/php.d/xdebug.ini
@@ -4,5 +4,5 @@ xdebug.remote_enable=On
 xdebug.remote_handler="dbgp"
 xdebug.remote_mode="req"
 xdebug.remote_port=9000
-xdebug.remote_host="216.47.142.104"
+xdebug.remote_host="YOUR_IP_ADDRESS_HERE"
 xdebug.profiler_output_dir=/tmp/php-xdebug
