Removed local declaration of volume mount point within docker-compose.yml. Updated documentation to reflect more detail steps after validation on a different computer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     env_file: .env
     volumes:
       - /var/log/apache2
-      - /Users/junaid/Projects/iitvcl/web:/var/www/html/vcl
+      - /var/www/html/vcl
     ports:
       - "80:80"
       - "443:443"
