Removing xdebug.ini from source control as it is client specific. revert to k8s brach for deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - db
     domainname: vcl.local
     hostname: www
-    image: junaid/vcl-www:debug
+    image: junaid/vcl-www:k8s
 
   managementnode:
     build: mgmt
