added make file to build docker images and publish them.

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ MYSQL_USER=vcl
 MYSQL_PASSWORD=s3cr3t
 MYSQL_RANDOM_ROOT_PASSWORD=yes
 MYSQL_PORT=3306
+
+# Makefile
+REGISTRY_HOST=cimgreg-t.iit.edu
+USERNAME=alisyed8
+NAME=vclapp
