--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - db
     domainname: vcl.local
     hostname: www
-    image: junaid/vcl-www:k8s
+    image: "${REGISTRY_HOST}/${NAME}-www"
 
   managementnode:
     build: mgmt
@@ -37,7 +37,7 @@ services:
       - db
     volumes:
       - /var/log/vcl/
-    image: junaid/vcl-mgmt:k8s
+    image: "${REGISTRY_HOST}/${NAME}-mgmt"
 
 volumes:
   mariadb_data:
