removing documentation for perl modules

--- a/mgmt/Dockerfile
+++ b/mgmt/Dockerfile
@@ -32,7 +32,7 @@ RUN yum update -y && yum install -y \
     perl-Digest-SHA1 \
     perl-IO-String \
     perl-JSON \
-    perl-libwww-perl \    
+    perl-libwww-perl \
     perl-MailTools \
     perl-Net-Jabber \
     perl-Net-Netmask \
@@ -57,59 +57,59 @@ RUN ["curl", "-L", "https://cpanmin.us", "-o", "cpanm"]
 RUN ["chmod", "+x", "cpanm"]
 
 # install perl dependencies for vcld
-RUN ["cpanm", "CPAN", "--notest", "--skip-installed"]
-RUN ["cpanm", "Crypt::CBC", "--notest", "--skip-installed"]
-RUN ["cpanm", "Crypt::Rijndael", "--notest", "--skip-installed"]
-RUN ["cpanm", "DBI", "--notest", "--skip-installed"]
-RUN ["cpanm", "Digest::SHA1", "--notest", "--skip-installed"]
-RUN ["cpanm", "Frontier::Client", "--notest", "--skip-installed"]
-RUN ["cpanm", "LWP::Protocol::https", "--notest", "--skip-installed"]
-RUN ["cpanm", "Mail::Mailer", "--notest", "--skip-installed"]
-RUN ["cpanm", "Mo::builder", "--notest", "--skip-installed"]
-RUN ["cpanm", "Net::Netmask", "--notest", "--skip-installed"]
-RUN ["cpanm", "Net::SSH::Expect", "--notest", "--skip-installed"]
-RUN ["cpanm", "Object::InsideOut", "--notest", "--skip-installed"]
-RUN ["cpanm", "RPC::XML", "--notest", "--skip-installed"]
-RUN ["cpanm", "Scalar::Util", "--notest", "--skip-installed"]
-RUN ["cpanm", "Shell", "--notest", "--skip-installed"]
-RUN ["cpanm", "Term::ANSIColor", "--notest", "--skip-installed"]
-RUN ["cpanm", "Text::CSV_XS", "--notest", "--skip-installed"]
-RUN ["cpanm", "Time::HiRes", "--notest", "--skip-installed"]
-RUN ["cpanm", "URI", "--notest", "--skip-installed"]
-RUN ["cpanm", "YAML", "--notest", "--skip-installed"]
+RUN ["cpanm", "CPAN", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Crypt::CBC", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Crypt::Rijndael", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "DBI", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Digest::SHA1", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Frontier::Client", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "LWP::Protocol::https", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Mail::Mailer", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Mo::builder", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Net::Netmask", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Net::SSH::Expect", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Object::InsideOut", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "RPC::XML", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Scalar::Util", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Shell", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Term::ANSIColor", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Text::CSV_XS", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "Time::HiRes", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "URI", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm", "YAML", "--notest", "--skip-installed", "--no-man-pages"]
 
 # vmware vsphere perl sdk setup
-RUN ["cpanm" , "Archive::Zip", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Class::Data::Inheritable", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Class::MethodMaker", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Compress::Raw::Zlib", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Compress::Zlib", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Convert::ASN1", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Crypt::OpenSSL::RSA", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Crypt::SSLeay", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Crypt::X509", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Data::Dump", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Data::Dumper", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Devel::StackTrace", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Exception::Class", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Fatal", "--notest", "--skip-installed"]
-RUN ["cpanm" , "HTML::Parser", "--notest", "--skip-installed"]
-RUN ["cpanm" , "IO::Compress::Base", "--notest", "--skip-installed"]
-RUN ["cpanm" , "IO::Socket::INET6", "--notest", "--skip-installed"]
-RUN ["cpanm" , "JSON::PP", "--notest", "--skip-installed"]
-RUN ["cpanm" , "LWP::Protocol::https", "--notest", "--skip-installed"]
-RUN ["cpanm" , "MIME::Base64", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Net::INET6Glue", "--notest", "--skip-installed"]
-RUN ["cpanm" , "SOAP::Lite", "--notest", "--skip-installed"]
-RUN ["cpanm" , "Socket6", "--notest", "--skip-installed"]
-RUN ["cpanm" , "URI", "--notest", "--skip-installed"]
-RUN ["cpanm" , "UUID", "--notest", "--skip-installed"]
-RUN ["cpanm" , "UUID::Random", "--notest", "--skip-installed"]
-RUN ["cpanm" , "version", "--notest", "--skip-installed"]
-RUN ["cpanm" , "XML::LibXML", "--notest", "--skip-installed"]
-RUN ["cpanm" , "XML::LibXML::Common", "--notest", "--skip-installed"]
-RUN ["cpanm" , "XML::NamespaceSupport", "--notest", "--skip-installed"]
-RUN ["cpanm" , "XML::SAX", "--notest", "--skip-installed"]
+RUN ["cpanm" , "Archive::Zip", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Class::Data::Inheritable", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Class::MethodMaker", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Compress::Raw::Zlib", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Compress::Zlib", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Convert::ASN1", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Crypt::OpenSSL::RSA", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Crypt::SSLeay", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Crypt::X509", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Data::Dump", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Data::Dumper", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Devel::StackTrace", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Exception::Class", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Fatal", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "HTML::Parser", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "IO::Compress::Base", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "IO::Socket::INET6", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "JSON::PP", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "LWP::Protocol::https", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "MIME::Base64", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Net::INET6Glue", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "SOAP::Lite", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "Socket6", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "URI", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "UUID", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "UUID::Random", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "version", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "XML::LibXML", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "XML::LibXML::Common", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "XML::NamespaceSupport", "--notest", "--skip-installed", "--no-man-pages"]
+RUN ["cpanm" , "XML::SAX", "--notest", "--skip-installed", "--no-man-pages"]
 
 ADD vsphere-perl-sdk/VMware-vSphere-Perl-SDK-6.5.0-4566394.x86_64.tar.gz /tmp/
 WORKDIR /tmp/vmware-vsphere-cli-distrib/
